Finish figure 8 and overshoot discussion

--- a/JTB_ms/JTB_ms.Rmd
+++ b/JTB_ms/JTB_ms.Rmd
@@ -223,11 +223,11 @@ To aid in visualizing model results, we calculated values to indicate the degree
 where $j_{S1}$ and $j_{S2}$ are the specific input fluxes of the two substrates and $j_{Pm}$ is the maximum specific product formation rate, in units of Cmol Cmol^-1^ d^-1^.
 
 # Steady state behavior
-In a constant environment, the system ultimately reaches a steady state of exponential growth or decline. However, under some conditions, either of these outcomes may occur depending on initial values of symbiont and host biomass, indicating the presence of alternate stable states, which also correspond to either positive or negative growth (Fig. 2). The mechanism that produces these alternate stable states is the positive feedback between carbon-limitation of the host and CO~2~-limitation of photosynthesis: if symbiont biomass is initially very low (i.e., a "bleached" coral), the system cannot escape this positive feedback and cannot grow. However, if symbiont biomass is initially high (i.e., a "healthy" coral), then the system remains in a nitrogen-limited state with positive growth. For practical purposes, this section of the manuscript considers only positive growth steady states under constant environments; the subsequent "dynamic behavior" section explores how changing environments may cause the system to switch between alternate stable states, which we interpret in the context of coral bleaching.
+In a constant environment, the system ultimately reaches a steady state of exponential growth or decline. However, under some conditions, either of these outcomes may occur depending on initial values of symbiont and host biomass, indicating the presence of alternate stable states, corresponding to either positive or negative growth (Fig. 2). The mechanism that produces these alternate stable states is the positive feedback between carbon-limitation of the host and CO~2~-limitation of photosynthesis: if symbiont biomass is initially very low (i.e., a "bleached" coral), the system cannot escape this positive feedback and cannot grow. However, if symbiont biomass is initially high (i.e., a "healthy" coral), then the system remains in a nitrogen-limited state with positive growth. For practical purposes, this section of the manuscript considers only positive growth steady states under constant environments; the subsequent "dynamic behavior" section explores how changing environments may cause the system to switch between alternate stable states, which we interpret in the context of coral bleaching.
 
 ![Alternate stable states](../img/Fig2.png)
 
-To analyze steady state behavior, we ran the model to steady state across gradients of external irradiance and nutrients (Fig. 3), which revealed patterns consistent with observed phenomena in corals. Predicted growth rates are low at low light and DIN (~0.01 d^-1^), and begin increasing as both of these factors increase (Fig. 3A). Low light limits photosynthetic rates, resulting in less fixed carbon shared with the host and an associated increase in the symbiont to host biomass ratio (Fig. 3B). In agreement with this trend are many observations of negative correlation between irradiance and symbiont density [@Stimson:1997p3837; @Brown:1999p3534; @Fitt:2000p3792; @Titlyanov:2001p3631]. As higher light alleviates light-limitation of photosynthesis, host growth becomes less carbon-limited.
+To analyze positive-growth steady state behavior, we ran the model to steady state across gradients of external irradiance and nutrients (Fig. 3), which revealed patterns consistent with observed phenomena in corals. Predicted growth rates are low at low light and DIN (~0.01 d^-1^), and begin increasing as both of these factors increase (Fig. 3A). Low light limits photosynthetic rates, resulting in less fixed carbon shared with the host and an associated increase in the symbiont to host biomass ratio (Fig. 3B). In agreement with this trend are many observations of negative correlation between irradiance and symbiont density [@Stimson:1997p3837; @Brown:1999p3534; @Fitt:2000p3792; @Titlyanov:2001p3631]. As higher light alleviates light-limitation of photosynthesis, host growth becomes less carbon-limited.
 
 ![Steady state values of **A)** specific growth (Cmol Cmol^-1^ d^-1^), **B)** the symbiont to host biomass ratio (CmolS CmolH^-1^), **C)** relative C- or N-limitation of host biomass formation, and **D)** relative CO~2~- or light-limitation of symbiont photosynthesis, across gradients of external irradiance and dissolved inorganic nitrogen. Note that typical conditions for reefs are ~1e-7 M DIN and 10-20 mol photons m^-2^ d^-1^. Simulations for each combination of light and nutrients (41 points along each axis) were run for 100 days with a time step of 1 day. Negative steady state growth rates, and corresponding S:H ratios, were set to zero.](../img/Fig3.png)
 
@@ -257,10 +257,10 @@ Symbiont densities and coral growth rates are known to vary seasonally, represen
 
 The prediction of higher growth when light is reduced indicates that growth is not limited by low light in winter, but is actually reduced by excess light in summer, consistent with the experimental findings of @Schutter:2011ie. Seasonal summertime reductions in tissue biomass have also been well-documented in the field [@Fitt:2000p3792], along with reductions in net photosynthetic capacity [@MullerParker:1987cr]. Importantly, while light alone (at these levels) may drive seasonal dynamics in the ways discussed, temperature fluctuations may attenuate or even reverse the effect of light as cooler winters depress metabolism; thus, the relative magnitude of fluctuation in temperature, light, and other factors may produce wide variability in the direction and magnitude of seasonal changes in growth and symbiont abundance, depending on location and microhabitat. Nevertheless, the seasonal variability predicted here (Fig. 5) is consistent with experimental and field observations for corals, and demonstrates the power of this model to predict dynamic behavior that mechanistically integrates multiple environmental drivers.
 
-## Coral bleaching
+## Coral bleaching and recovery
 Coral bleaching is the stress-induced loss of symbiotic algae from coral tissues, which can occur in response to a variety of environmental stressors. In most cases, coral bleaching is thought to begin with photooxidative stress in symbiont photosynthesis [@Lesser:1997p3587], which triggers a cascade of events leading to symbiont expulsion [@Weis:2008p944]. As symbionts are expelled, the host receives less fixed carbon, which may then compromise its ability to activate CCMs that deliver CO~2~ to photosynthesis [@Wooldridge:2013tj]. Increasing CO~2~-limitation for remaining symbionts, along with an amplified internal light environment due to reduced self-shading [@Enriquez:2005p142], may further exacerbate photooxidative stress and accelerate symbiont expulsion, driving the coral into a bleached state.
 
-While these positive feedbacks have been discussed previously in the literature, this is the first attempt to implement and explore their properties within a dynamical model. Interestingly, these feedbacks lead to alternate stable states. The 'healthy' state is characterized by nitrogen-limitation of both symbiont and host: under these conditions, the symbiont translocates sufficient carbon to support host growth and CCMs, which ensures that photosynthesis does not become CO~2~-limited. However, if carbon translocation is disrupted (and light is sufficiently high), then the system is driven into the 'bleached' state by photooxidative stress and positively reinforcing carbon- and CO~2~-limitation. In this context, coral bleaching can be understood as a transition from one stable state to another, and bleaching thresholds are sets of environmental conditions that push a healthy-state coral onto a trajectory leading to a bleached state. 
+While these positive feedbacks have been discussed previously in the literature, this is the first attempt to implement and explore their properties within a dynamical model. Interestingly, these feedbacks lead to alternate stable states in the symbiotic system. The 'healthy' state is characterized by nitrogen-limitation of both symbiont and host: under these conditions, the symbiont translocates sufficient carbon to support host growth and CCMs, which ensures that photosynthesis does not become CO~2~-limited. However, if carbon translocation is disrupted (and light is sufficiently high), then the system is driven into the 'bleached' state by photooxidative stress and positively reinforcing carbon- and CO~2~-limitation. In this context, coral bleaching can be understood as a transition from one stable state to another, and bleaching thresholds are sets of environmental conditions that push a healthy-state coral onto a trajectory leading to a bleached state. 
 
 We are highly interested in the conditions under which the system switches from a healthy to a bleached state, and can use this model as a tool to explore this dynamic behavior. Most straightforwardly, this switch occurs when increasing external irradiance (Fig. 6A) causes sufficient ROS production (Fig. 6B) and photoinhibition (Fig. 6C) such that the positive feedbacks between host carbon-limitation (Fig. 6D) and CO~2~-limitation of photosynthesis (Fig. 6E) are rapidly engaged, leading to even greater photooxidative stress and a rapid decline in S:H biomass (Fig. 6F), characteristic of coral bleaching. However, the positive feedbacks involved in bleaching are not engaged only in response to high external irradiance alone; in fact, they depend on the relative balance of light energy absorption and quenching, which in turn depends on the availability of CO~2~ for photosynthesis. While previous models framed photooxidative stress as a fixed response to absolute external irradiance [@Eynaud:2011tv], our implementation considers the dynamic balance of multiple energy sinks in the causation of stress, which is more consistent with current understanding of symbiosis dysfunction [@Wooldridge:2013tj], and establishes a critical role of host CCMs in providing CO~2~ for photosynthesis [@Tansik:2015cm; @Hopkinson:2015ev].
 
@@ -270,11 +270,15 @@ The importance of host CCM activity establishes significant interactive roles fo
 
 ![Bleaching with interactive factors. Simulations of high light stress (sinusoid with maximum=48 mol ph m^-2^ d^-1^) under default environmental conditions (solid line; DIN=1e-7 molN/L; prey=3e-6 CmolX/L), or with elevated feeding (dashed line; prey=6e-6 CmolX/L), or elevated nutrients (dotted line; DIN=1e-6 molN/L). Initial symbiont biomass was set to the steady state for each set of starting conditions, respectively. (All parameters set to default values).](../img/Fig7.png)
 
-Since bleaching represents an alternative stable state, it follows that a bleached coral cannot recover unless the external condition that induced bleaching is alleviated. In natural settings, this typically occurs by seasonal declines in temperature and light. However, due to hysteresis, a coral cannot recover along the same trajectory it followed during bleaching; indeed, the stressor must be alleviated well *below* the threshold that initially caused bleaching in order for the system to recover (Fig. 2; Fig. X). This is because under the same external conditions, a bleached coral (relative to a healthy one) is characterized by greater light amplification and weaker CCM activity, which serve to maintain the bleached state. The magnitude of hysteresis will depend on external nutrients and prey availability, as well as model parameters, yet the fundamental concept demonstrates a core behavior of the system.
+Since bleaching is induced by an external stressor, recovery from bleaching cannot occur unless the stressor is alleviated. In natural settings, this typically occurs by seasonal declines in temperature and light. However, alternate stable states lead to significant hysteresis, indicating that a coral cannot recover along the same trajectory it followed during bleaching; indeed, the stressor must be alleviated well *below* the threshold that initially caused bleaching in order for the system to recover (Fig. 2; Fig. X). This is because under the same external conditions, a bleached coral (relative to a healthy one) is characterized by greater light amplification and weaker CCM activity, which serve to maintain the bleached state. The magnitude of hysteresis will depend on external nutrients and prey availability, as well as model parameters, yet the core behavior of hysteresis illustrates the alternate stable states that exist in the symbiotic system.
 
-![new overshoot figure.....](../img/Fig8.png)
+![Recovery from bleaching under varying N:C availability. Higher N:C ratios in a heterotrophic food source (effectively representing higher external DIN and/or lower feeding rates) cause a larger overshoot in the S:H biomass ratio, and prolong the duration of time until the system 'recovers' by re-establishing nitrogen-limitation (represented by black dots on each trajectory). All simulations run with default parameters (except varying nNX), and DIN=1e-7 molN/L, prey=1e-6 CmolX/L, and initial symbiont biomass=0.0001.](../img/Fig8.png)
 
-The hysteresis demonstrated in Fig. 8 reveals another interesting behavior of the system: during recovery from bleaching, the S:H biomass ratio reaches a higher value that 'overshoots' the ratio maintained in the healthy stable state. In fact, such a phenomenon has been observed in both experimental [@Cunning:2015ja] and field studies [@Kemp:2014ug] documenting recovery from bleaching, and has been interpreted as a potential 'disequilibrium in host-symbiont regulation' [@Kemp:2014ug]. The model explains this 'overshoot' as an approach to a bifurcation point in the dynamical system: during recovery from the 'bleached' state, host growth is more strongly carbon-limited than symbiont growth (since the symbiont has priority access to carbon), so S:H biomass increases. S:H biomass will continue to increase beyond the alternative steady state levels as long as the symbiont remains carbon-limited; not until nitrogen becomes more strongly limiting to symbiont growth than carbon (hence forcing the symbiont to share carbon with the host) will the system flip back to the 'healthy' state, characterized by high carbon fixation rates and overall nitrogen-limitation. Of course, the magnitude of this 'overshoot' depends on external nutrient concentrations and the rate of change in the stressor during recovery, though simulations predict similar magnitudes to what was observed by @Kemp:2014ug and @Cunning:2015ja (Fig. S9).
+The dynamics of recovery from bleaching reveal another interesting behavior of the system: under some conditions, the S:H biomass ratio may increase to a higher value that 'overshoots' the ratio maintained in the 'healthy' state under the same conditions (Fig. 8; Fig. S9). In fact, unusually high symbiont densities have been observed after recovery from bleaching in both experimental [@Cunning:2015ja] and field studies [@Kemp:2014ug], and have been interpreted as a potential 'disequilibrium in host-symbiont regulation' [@Kemp:2014ug]. The model explains this 'overshoot' as an approach to a bifurcation point in the dynamical system <<NOT RIGHT>>. As the symbiont begins repopulating the host, CO~2~ is limiting and nitrogen is replete, allowing nearly all fixed carbon to be used for symbiont growth. As a result, host growth remains strongly carbon-limited, CCM activity remains weak, and photosynthesis remains CO~2~-limited. As long as this carbon-limitation persists, S:H biomass will continue to increase beyond the 'healthy' steady state level, until the symbiont population eventually reaches a high enough density such that nitrogen limits its growth more strongly than carbon. At this point, which represents the peak of the 'overshoot', the symbiont begins to share carbon with the host, which then supplies more CO~2~ for photosynthesis, etc., causing the system to rapidly escape the positive feedbacks that were maintaining carbon-limitation (see Fig. S9 for illustration of all fluxes during overshoot). The re-establishment of nitrogen-limitation resumes high rates of carbon fixation and coral growth, bringing the S:H biomass ratio back down to a stable equilibrium. 
+
+The occurrence and the magnitude of this overshoot depend on the relative inputs of carbon and nitrogen to the system -- any factor that enhances carbon-limitation (e.g. high DIN and/or low feeding) therefore magnifies the overshoot and prolongs the dysfunctional, carbon-limited state of the symbiosis (Fig. 8). On the other hand, factors that favor nitrogen-limitation, such as low external DIN, high feeding rates, will prevent an overshoot from occurring at all, since nitrogen-limitation is re-established in the system before S:H biomass ratios reach high levels. While many scenarios are possible under different environmental conditions, we illustrate the general effects of varying N and C availability on recovery from bleaching with a series of simulations that vary the N:C ratio of host's heterotrophic food source (Fig. 8): lower N:C ratios (effectively representing lower DIN and/or higher heterotrophy) favor nitrogen-limitation and more rapid recovery, while higher N:C ratios (effectively representing higher DIN and/or lower heterotrophy) favor carbon-limitation and prolonged recovery with a larger overshoot in S:H biomass.
+
+Importantly, the re-establishment of nitrogen-limitation that characterizes the 'healthy' symbiosis is the most important diagnostic for recovery, as this is when high carbon fixation and growth rates are resumed. A high S:H biomass ratio alone does not indicate a 'healthy' state has been reached, because overall C-limitation could still persist and thus the host isn't really growing. This could explain why corals that have apparently recovered their symbiont populations after bleaching still do not grow or suffer reduced reproduction until much later (xxx). Together, these dynamics indicate that acquisition of carbon from a source other than the symbiont is extremely important for the host in order to recover from bleaching. The system can 'recover' (in terms of resuming positive growth and N-limitation) more rapidly when the coral obtains more carbon. Indeed, feeding has been shown to promote more rapid recovery from bleaching (xxx). Moreover, if the host could obtain an independent source of carbon, such as direct uptake of DOC (xxx), this could be even more important in ensuring rapid recovery from a bleached state.
 
 # Conclusions
 This simplified dynamic bioenergetic model of coral-*Symbiodinium* symbioses mechanistically reproduces patterns in steady-state coral growth and symbiont abundance commonly observed in corals, including higher symbiont abundance with higher nutrients and feeding, lower symbiont abundance with increasing light, and optimal growth at intermediate light levels. Moreover, the model reproduces complex dynamic behaviors including seasonal changes in symbiont density at different nutrient levels, rapid bleaching above a threshold of high light, mitigation of bleaching by heterotrophic feeding, exacerbation of bleaching by elevated nutrients, and an overshoot of symbiont density during recovery from bleaching. These examples demonstrate the model's ability to integrate multiple environmental forcing functions to reproduce complex responses; meanwhile, the diversity of these phenomena suggest the model has captured many of the important features of the system in a unifying mechanistic framework. This model also provides a new conceptual framework for considering coral bleaching as a transition to an alternate stable state, which has important implications for understanding the performance and maintenance of symbiotic interactions. In this context, the 'healthy' stable state represents a scenario in which the host is 'in control' of the system, with nitrogen-limitation stabilizing the symbiont to host biomass ratio and maintaining positive growth. Conversely, carbon-limitation represents a loss of host 'control', wherein positive feedbacks result in a loss of capacity for photosynthetic carbon fixation and positive growth. Importantly, these 'control' mechanisms arise entirely passively through feedbacks present in the system.
