add Fig8 to Makefile

--- a/JTB_ms/JTB_ms.Rmd
+++ b/JTB_ms/JTB_ms.Rmd
@@ -268,11 +268,11 @@ We are highly interested in the conditions under which the system switches from 
 
 The importance of host CCM activity establishes significant interactive roles for other factors in influencing coral bleaching responses. For example, simulations of high light stress (Fig. 7) demonstrate that bleaching can be attenuated by heterotrophic feeding, a phenomenon which has been observed experimentally [@Borell:2008p108]. The mechanism underlying this prediction is that feeding by the host increases host CCM activity, which delays the onset of CO~2~-limitation of photosynthesis and reduces bleaching severity. On the other hand, elevated nutrients exacerbate bleaching (Fig. 7), since higher symbiont densities are more susceptible to CO~2~-limitation [@Wooldridge:2009p7807]. Several experimental [@Cunning:2013gp; @VegaThurber:2014hk] and correlational studies [@Wooldridge:2009kb] are consistent with this mechanistic link between high nutrients and bleaching.
 
-![Bleaching with interactive factors. Simulations of high light stress (sinusoid with maximum=48 mol ph m^-2^ d^-1^) under default environmental conditions (solid line; DIN=1e-7 molN/L; prey=3e-6 CmolX/L), or with elevated feeding (dashed line; prey=6e-6 CmolX/L), or elevated nutrients (dotted line; DIN=1e-6 molN/L). Initial symbiont biomass was set to the steady state for each set of starting conditions, respectively. (All parameters set to default values).](../img/Fig7.png)
+![Bleaching with interactive factors. Simulations of high light stress (sinusoid with maximum=48 mol ph m^-2^ d^-1^) under default environmental conditions (solid line; DIN=1e-7 molN L^-1^; prey=3e-6 CmolX L^-1^), or with elevated feeding (dashed line; prey=6e-6 CmolX L^-1^), or elevated nutrients (dotted line; DIN=1e-6 molN L^-1^). Initial symbiont biomass was set to the steady state for each set of starting conditions, respectively. (All parameters set to default values).](../img/Fig7.png)
 
 Since bleaching is induced by an external stressor, recovery from bleaching cannot occur unless the stressor is alleviated. In natural settings, this typically occurs by seasonal declines in temperature and light. However, alternate stable states lead to significant hysteresis, indicating that a coral cannot recover along the same trajectory it followed during bleaching; indeed, the stressor must be alleviated well *below* the threshold that initially caused bleaching in order for the system to recover (Fig. 2; Fig. X). This is because under the same external conditions, a bleached coral (relative to a healthy one) is characterized by greater light amplification and weaker CCM activity, which serve to maintain the bleached state. The magnitude of hysteresis will depend on external nutrients and prey availability, as well as model parameters, yet the core behavior of hysteresis illustrates the alternate stable states that exist in the symbiotic system.
 
-![Recovery from bleaching under varying N:C availability. Higher N:C ratios in a heterotrophic food source (effectively representing higher external DIN and/or lower feeding rates) cause a larger overshoot in the S:H biomass ratio, and prolong the duration of time until the system 'recovers' by re-establishing nitrogen-limitation (represented by black dots on each trajectory). All simulations run with default parameters (except varying nNX), and DIN=1e-7 molN/L, prey=1e-6 CmolX/L, and initial symbiont biomass=0.0001.](../img/Fig8.png)
+![Recovery from bleaching under varying N:C availability. Higher N:C ratios in a heterotrophic food source (effectively representing higher external DIN and/or lower feeding rates) cause a larger overshoot in the S:H biomass ratio, and prolong the duration of time until the system 'recovers' by re-establishing nitrogen-limitation (represented by black dots on each trajectory). All simulations run with default parameters (except varying nNX), L=10 mol photons m^2^ d^-1^, DIN=1e-7 molN L^-1^, prey=1e-6 CmolX L^-1^, and initial S:H biomass=0.0001.](../img/Fig8.png)
 
 The dynamics of recovery from bleaching reveal another interesting behavior of the system: under some conditions, the S:H biomass ratio may increase to a higher value that 'overshoots' the ratio maintained in the 'healthy' state under the same conditions (Fig. 8; Fig. S9). In fact, unusually high symbiont densities have been observed after recovery from bleaching in both experimental [@Cunning:2015ja] and field studies [@Kemp:2014ug], and have been interpreted as a potential 'disequilibrium in host-symbiont regulation' [@Kemp:2014ug]. The model explains this 'overshoot' as an approach to a bifurcation point in the dynamical system <<NOT RIGHT>>. As the symbiont begins repopulating the host, CO~2~ is limiting and nitrogen is replete, allowing nearly all fixed carbon to be used for symbiont growth. As a result, host growth remains strongly carbon-limited, CCM activity remains weak, and photosynthesis remains CO~2~-limited. As long as this carbon-limitation persists, S:H biomass will continue to increase beyond the 'healthy' steady state level, until the symbiont population eventually reaches a high enough density such that nitrogen limits its growth more strongly than carbon. At this point, which represents the peak of the 'overshoot', the symbiont begins to share carbon with the host, which then supplies more CO~2~ for photosynthesis, etc., causing the system to rapidly escape the positive feedbacks that were maintaining carbon-limitation (see Fig. S9 for illustration of all fluxes during overshoot). The re-establishment of nitrogen-limitation resumes high rates of carbon fixation and coral growth, bringing the S:H biomass ratio back down to a stable equilibrium. 
 
