--- a/JTB_ms/JTB_ms.tex
+++ b/JTB_ms/JTB_ms.tex
@@ -1412,11 +1412,12 @@ and bleaching.
 \caption{Bleaching with interactive factors. Simulations of high light
 stress (sinusoid with maximum=48 mol ph m\textsuperscript{-2}
 d\textsuperscript{-1}) under default environmental conditions (solid
-line; DIN=1e-7 molN/L; prey=3e-6 CmolX/L), or with elevated feeding
-(dashed line; prey=6e-6 CmolX/L), or elevated nutrients (dotted line;
-DIN=1e-6 molN/L). Initial symbiont biomass was set to the steady state
-for each set of starting conditions, respectively. (All parameters set
-to default values).}
+line; DIN=1e-7 molN L\textsuperscript{-1}; prey=3e-6 CmolX
+L\textsuperscript{-1}), or with elevated feeding (dashed line; prey=6e-6
+CmolX L\textsuperscript{-1}), or elevated nutrients (dotted line;
+DIN=1e-6 molN L\textsuperscript{-1}). Initial symbiont biomass was set
+to the steady state for each set of starting conditions, respectively.
+(All parameters set to default values).}
 \end{figure}
 
 Since bleaching is induced by an external stressor, recovery from
@@ -1443,8 +1444,9 @@ higher external DIN and/or lower feeding rates) cause a larger overshoot
 in the S:H biomass ratio, and prolong the duration of time until the
 system `recovers' by re-establishing nitrogen-limitation (represented by
 black dots on each trajectory). All simulations run with default
-parameters (except varying nNX), and DIN=1e-7 molN/L, prey=1e-6 CmolX/L,
-and initial symbiont biomass=0.0001.}
+parameters (except varying nNX), L=10 mol photons m\textsuperscript{2}
+d\textsuperscript{-1}, DIN=1e-7 molN L\textsuperscript{-1}, prey=1e-6
+CmolX L\textsuperscript{-1}, and initial S:H biomass=0.0001.}
 \end{figure}
 
 The dynamics of recovery from bleaching reveal another interesting
